--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAd": {
-    "Authority": "https://login.microsoftonline.com/206bad4c-d071-4c91-9181-ef7047e6590b",
-    "ClientId": "737debc6-39bb-4e71-8c3e-27bdf3b18846",
+    "Authority": "https://login.microsoftonline.com/9ba3a7b6-6e0f-4c6d-ac61-9efbf3394aa8",
+    "ClientId": "473b294a-a28b-466f-ba80-99eeacd88c98",
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://azshorterdevrtm3e.azurewebsites.net/"
+    "Endpoint": "https://shortenertoolsjkch2.azurewebsites.net/"
   },
   "DetailedErrors":true
 }
